change last and first slides

--- a/index.html
+++ b/index.html
@@ -42,10 +42,12 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section></section>
-				<section data-background="#007acc" data-background-transition="zoom">
+				<section>
 					<h1>Dagger2</h2>
-					<h3>jako przykład Dependecy injection</h4>
+					<p>jako przykład Dependecy injection</p>
+					<br/ >
+					<br/ >
+					<p>Bartosz Dybała</p>
 				</section>
 				<section data-transition="slide-in fade-out">
 					<h2>Dependency Injection</h2>
@@ -503,6 +505,13 @@
 						<li><b>Coding In Flow</b> - Dagger 2</li>
 					</ul>
 				</section>
+		        <section>
+		            <h1>DZIĘKUJĘ ZA UWAGĘ</h1>
+		            <p>Bartosz Dybała</p>
+		            <br />
+		            <br />
+		            <img src="img/logo.svg" width="27%" alt="" style="background: #191919; border: 0px"/>
+		        </section>
 			</div>
 			<div style="position: absolute; bottom: 0">
 					<img  src="img/logo.svg" alt="" width="157.4px" height="49.1px" style="background: white"/>
